[package]
name = "estelle-lsp"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "estelle-lsp"
path = "src/main.rs"

[dependencies]
tower-lsp-server = "0.23"
tokio = { version = "1", features = ["full"] }
dashmap = "6"
ropey = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[profile.release]
strip = true
opt-level = "z"
lto = true
codegen-units = 1
